[gd_scene load_steps=4 format=3 uid="uid://c0oylgoqw2dnu"]

[ext_resource type="Script" path="res://scripts/entity/enemies/triangle_big.gd" id="1_df60p"]
[ext_resource type="Script" path="res://scripts/entity/enemies/enemy_component.gd" id="2_imvmb"]
[ext_resource type="Texture2D" uid="uid://cyfw73pxx884s" path="res://assets/sprites/enemy/en_triangle_big.png" id="3_qjl1c"]

[node name="BigTriangle" type="AnimatableBody2D" groups=["enemy"]]
script = ExtResource("1_df60p")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -16, -16, 16, 16, 16)

[node name="EnemyComponent" type="Node2D" parent="."]
visible = false
script = ExtResource("2_imvmb")
SPEED = Vector2(0, -30)
LIFE = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_qjl1c")

[node name="RayBottom1" type="RayCast2D" parent="."]
position = Vector2(-12, 13)
rotation = 3.14159
target_position = Vector2(-8.30516e-07, -19)
collision_mask = 2

[node name="RayBottom2" type="RayCast2D" parent="."]
position = Vector2(12, 13)
rotation = 3.14159
target_position = Vector2(-8.30516e-07, -19)
collision_mask = 2

[node name="RayTop" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-8.30516e-07, -19)
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="." groups=["damage_area"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(0, -16, -16, 16, 16, 16)
